# ebrains_metadata_downloader

./: README.md  github_repo.py  hbp_cwl_input_downloader  input_output.py  main.py  modeldb_repo.py  pyproject.toml  zenodo_repo.py
ebrains_metadata_downloader/: __init__.py  github_repo.py  input_output.py  main.py  zenodo_repo.py
tests/fa393b61-92ab-4925-ad53-d36cde34c5d6/inputs/: pre-run.json  run.json
