[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "ebrains-metadata-downloader"
version = "2025.07.04"
dependencies = [
    "json",
    "urllib",
    "requests",
    "warnings",
    "traceback",
    "beautifulsoup",
    "re",
    "fairgraph",
    "hashlib",
    "os",
    "argparse"
]

authors = [
  { name="Florent BONNIER", email="florent.bonnier@cnrs.fr" },
]
maintainers = [
  { name="Florent BONNIER", email="florent.bonnier@cnrs.fr" },
]
description = "Downloads metadata from EBRAINS KG computational model using model-version id and EBRAINS credentials"
readme = "README.md"
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["ebrains_metadata_downloader"]